--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,35 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-
-#game-container{
-  display: grid;
-  grid-template-columns: repeat(3, 50px);
-  justify-content: center;
+.game-body{
+  text-align: center;
+  padding: 10px 0;
   
 }
 
+#game-container{
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
+  justify-content: center;
+}
+
+
 .game-box{
   border: solid 1px;
-  height: 50px;
-  
+  height: 100px;
+  text-align: center;
+  line-height: 100px;
+  font-size: 30px;
+  font-family: sans-serif;
+
 }
 
 .game-box:hover{
   background-color: hsl(0, 0%, 90%);
 }
+
+
 
